07-ingress/definitions/api-test-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: api-test-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 5050
      port: 5050
  selector:
    type: test-backend
